spacing fixed

--- a/css/index.css
+++ b/css/index.css
@@ -290,14 +290,11 @@ footer {
     body .container {
         width: 100%;
         margin: 0px 20px;
-        padding: 0px;
     }
 
     header .header-box {
         display: flex;
         flex-flow: column wrap;
-        margin: 0px;
-        padding: 0px;
         width: 100%;
     
     }
@@ -307,6 +304,8 @@ footer {
         flex-flow: column;
         margin: 0 auto;
         align-items: center;
+        width: 100%;
+
     }
 
      .header-box nav a {
@@ -316,10 +315,6 @@ footer {
         text-align: center;
         margin: 0px;
     } 
-
-    .logo {
-        /* border: 1px solid black;         */
-    }
 
     body .main-content .top-content{
         flex-flow: column nowrap;
